--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
         implementation "ch.qos.logback:logback-classic:${logback_classic_version}"
         testImplementation "org.assertj:assertj-core:${assertj_core_version}"
         testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+        implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
         //implementation group: 'net.serenity-bdd', name: 'serenity-screenplay', version: '4.0.3'
 
 
