--- a/serenity.properties
+++ b/serenity.properties
@@ -1,1 +1,5 @@
 serenity.project.name=Serenity and Cucumber Quick Start
+
+webdriver.timeouts.implicitlywait=10000
+webdriver.wait.for.timeout=10000
+serenity.timeout=10000
