--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -14,4 +14,8 @@ webdriver {
         "disable-dev-shm-usage", "disable-extensions", "disable-web-security", "disable-translate", "disable-logging"]
     }
   }
+    timeouts {
+    implicitlywait = 5000
+    fluentwait = 10000
+  }
 }
