--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,7 @@
 serenity.project.name=Serenity and Cucumber Quick Start
 
-webdriver.timeouts.implicitlywait=10000
-webdriver.wait.for.timeout=10000
-serenity.timeout=10000
+#webdriver.timeouts.implicitlywait=10000
+#webdriver.wait.for.timeout=10000
+#serenity.timeout=10000
+
+serenity.step.delay=1000
