update time step delay

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,7 +1,6 @@
 serenity.project.name=Serenity and Cucumber Quick Start
 
-#webdriver.timeouts.implicitlywait=10000
-#webdriver.wait.for.timeout=10000
-#serenity.timeout=10000
 
-serenity.step.delay=1000
+serenity.console.colors = true
+#serenity.browser.maximized = true
+serenity.step.delay=750
